--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-Hello World
+<!DOCTYPE html>
+<head>
+  <title> Species File Group </title>
+  <meta charset="UTF-8">
+  <meta name="description" content="Homepage of the Species File Group.">
+  <meta name="keywords" content="SpeciesFiles,3i,CoL,Catalog Of Life,Global Names,TaxonWorks,Biodiversity Informatics,Taxonomy,Species,DataScience,Species File Group">
+  <meta name="author" content="Species File Group">
+</head>
+
+<body>
+  <div style="position:fixed; top:10%; left:10%;">
+    <div style=" font-size: 200%; line-height: 150%;">
+      <h1> Species File Group  </h1>        
+
+      <h2> Workbenches </h2>
+      <p>
+      <a href="http://taxonworks.org">TaxonWorks</a><br>
+      <a href="http://software.speciesfile.org/HomePage/Software/SoftwareHomePage.aspx">Species Files</a>,
+      <a href="http://dmitriev.speciesfile.org/">3i</a>,
+      <a href="mx.phenomix.org/">mx</a>
+      </p> 
+
+      <h2> Global Names </h2>
+      <p>
+      <a href="http://globalnames.org/">Homepage</a>
+      </p>
+
+      <h2> Catalog of Life </h2>
+      <p> The Species File Group faciliates development of the Catalog of Life through its financial support to the Editor. </p>
+    </div> 
+    <p style="font-size:8pt;"> disclaimer: this site uses Google Analytics - font: <span id="font"></span> </p>
+  </div>
+
+  <script> 
+      // mindless font swapper that leaves flash of unstyled text, but hey!
+      var fonts = ['El+Messiri',  'Gruppo', 'Michroma', 'Poiret+One',  'Cormorant SC', 'Cairo'];
+
+      var item = fonts[Math.floor(Math.random()*fonts.length)];
+
+      // thanks http://stackoverflow.com/questions/574944/how-to-load-up-css-files-using-javascript
+      // you could encode the css path itself to generate id..
+      var cssId = 'myCss';  
+      if (!document.getElementById(cssId))
+      {
+        var head  = document.getElementsByTagName('head')[0];
+        var link  = document.createElement('link');
+        link.id   = cssId;
+        link.rel  = 'stylesheet';
+        link.type = 'text/css';
+        link.href = 'https://fonts.googleapis.com/css?family=' + item;
+        link.media = 'all';
+        head.appendChild(link);
+      }
+
+      document.body.style = "font-family:'" + item.replace("+", " ") + "', sans-serif;";
+      document.getElementById('font').innerHTML = item.replace("+", " "); 
+
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-85440666-2', 'auto');
+      ga('send', 'pageview');
+  </script>
+</body>
+</html>
+
