--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <div style=" font-size: 200%; line-height: 150%;">
       <h1> Species File Group  </h1>        
 
+      <p> <a href="https://github.com/SpeciesFileGroup">On Github</a> </p>
+
       <h2> Workbenches </h2>
       <p>
       <a href="http://taxonworks.org">TaxonWorks</a><br>
       <a href="http://software.speciesfile.org/HomePage/Software/SoftwareHomePage.aspx">Species Files</a>,
       <a href="http://dmitriev.speciesfile.org/">3i</a>,
-      <a href="mx.phenomix.org/">mx</a>
+      <a href="http://mx.phenomix.org/">mx</a>
       </p> 
 
       <h2> Global Names </h2>
@@ -26,14 +28,14 @@
       </p>
 
       <h2> Catalog of Life </h2>
-      <p> The Species File Group faciliates development of the Catalog of Life through its financial support to the Editor. </p>
+      <p> The Species File Group faciliates development of the <a href="http://catalogueoflife.org/">Catalog of Life</a> through its financial support to the Editor. </p>
     </div> 
     <p style="font-size:8pt;"> disclaimer: this site uses Google Analytics - font: <span id="font"></span> </p>
   </div>
 
   <script> 
       // mindless font swapper that leaves flash of unstyled text, but hey!
-      var fonts = ['El+Messiri',  'Gruppo', 'Michroma', 'Poiret+One',  'Cormorant SC', 'Cairo'];
+      var fonts = [ 'Poiret+One' ];
 
       var item = fonts[Math.floor(Math.random()*fonts.length)];
 
