--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div style=" font-size: 200%; line-height: 150%;">
       <h1> Species File Group  </h1>        
 
-      <p> <a href="https://github.com/SpeciesFileGroup">On Github</a> </p>
+      <p> <a href="https://github.com/SpeciesFileGroup">On Github</a>, <a href="http://blog.speciesiesfilegroup.org">Blog</a></p>
 
       <h2> Workbenches </h2>
       <p>
