--- a/about.html
+++ b/about.html
@@ -6,19 +6,26 @@ title: About
 <br>
 
 <h1 class="mt-5">{{ page.title }}</h1>
-<p class="lead"> An overview of the Species File Group   </p>
+<p class="lead"> An overview of the Species File Group </p>
+
+<h2> Contact </h2>
+<p class="lead"> Address general questions to Ed or Matt </p>
+<ul>
+  <li><a href="mailto:dewalt@illinois.edu">R Edward DeWalt</a></li>
+  <li><a href="mailto:diapriid@gmail.com">Matt Yoder</a></li>
+</ul>
 
 <h2> History </h2>
-<p> While the group has now has a diverse background some of the its earliest history is in the context of the Orthoptera Species File.  <a href="http://orthoptera.speciesfile.org/HomePage/Orthoptera/Database.aspx#history">Read more here</a>.  Much more remains to be written here.</p>
+<p> While the group has now has a diverse background some of the its earliest history is in the context of the Orthoptera Species File.  <a href="http://orthoptera.speciesfile.org/HomePage/Orthoptera/Database.aspx#history">Read more here</a>.<em> Much more remains to be written.</em></p>
 
 <h2> Organization structure</h2>
 <p> Nested in the <a href="">Illinois Natural History Survey</a> in Champaign-Urbana, Illinois, part of the <a href="">Prarie Research Institute</a>, the Species File Group has core members and collaborators around the world. </p>
 
 <h2> Funding </h2>
 <h3> Endowment </h3>
-<p>The SFG is funded by an endowment to the University of Illinois Champaign Urbana. This provides a perhaps unique enviroment from which to develop biodiversity informatics tools, data, and collaborations over long periods of time.</p>
+<p>The SFG is funded by an endowment to the University of Illinois Champaign Urbana. The endowment provides a relatively rare environment within the field of biodiversity informatics, i.e. fixed funding for long term research and development.</p>
 <h3> Grants </h3>
-<p class="lead"> PIed by members of the Core team </p>
+<p class="lead">Additional funding has come from grants to PIs of the Core team</p>
 <ul>
   <li> DeWalt, Dmitriev, Yoder - NSF CSBR </li>
   <li> Yoder - NFS ABI </li>
@@ -27,9 +34,10 @@ title: About
   <li> Mozzherin, Yoder - Hathi Trust </li>
 </ul>
 
-<h2> Contact </h2>
-<p class="lead"> Address general questions to Ed or Matt </p>
+<h2> Site </h2>
+<p class="lead"> The speciesfilegroup.org website </p>
 <ul>
-  <li><a href="mailto:dewalt@illinois.edu">R Edward DeWalt</a></li>
-  <li><a href="mailto:diapriid@gmail.com">Matt Yoder</a></li>
+  <li>This site built using Jekyll and is hosted on Github pages. <a href="https://github.com/SpeciesFileGroup/speciesfilegroup.github.io">Open an issue or make a PR there.</a></li>
 </ul>
+
+
