--- a/collaboration.html
+++ b/collaboration.html
@@ -13,14 +13,14 @@ title: Collaboration
 </div>
 
 <h1 class="mt-5">{{ page.title }}</h1>
-<p class="lead"> A wide range of people using, and helping us to develop better informatics</p>
+<p class="lead"> We work with a wide range of people and organizations to advance biodiversity informatics</p>
 
 <h2 class="mt-5">Catalogue of Life</h2>
 <p class="lead">The SFG supports the Editorship, development, curation of the <a href="https://catalogueoflife.org/">Catalogue of Life</a></p>
 <ul>
-  <li> The Editor of the Catalogue of Life, Yuri Roskov, is a Species File Group Core member </li>
-  <li> Geoff Ower is a core contributor to the software used in the editorial process, and GBIF's new Catalog of Life+ tools and metadata</li>
-  <li> The Species File Group has actively funded those seeking to fill gaps in the Catalog of Life.  It's early mission was focused on facilitating the growth of the Catalog of Life through the sharing of its tools to others who wished to contribute to this project.</li>
+  <li> The Editor of the Catalogue of Life, Yuri Roskov, is a SFG Core member </li>
+  <li> Geoff Ower is a SFG Core member, he is its key incoming-data-wrangler and a core contributor to GBIF's new Catalog of Life+ tools and metadata development</li>
+  <li> The SFG has actively funded those seeking to fill gaps in the Catalog of Life. Its early mission was focused on facilitating the growth of the Catalog of Life through the sharing of its tools to others who wished to contribute to this project.</li>
 </ul> 
 
 <h2 class="mt-5">Organizations</h2>
