--- a/who.html
+++ b/who.html
@@ -40,6 +40,7 @@ Open positions </h2>
 <p class="lead"> Core team members now retired </p>
 <ul>
   <li> David Eades </li>
+  <li> Beth Frank </li>
   <li> Marilyn Beckman </li>
   <li> Jim Tucker </li>
   <li> Mike Maehr</li>
