--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Species File Group - Home
 <div class="jumbotron">
   <div class="container">
     <h1 class="display-3">Species File Group</h1>
-    <p class="lead">The Species <small class="text-muted">(life on Earth)</small> File <small class="text-muted">(software)</small> Group <small class="text-muted">(collaborating community)</small> builds tools that facilitate cataloguing, description, and study of the Earth’s species.</p>
+    <p class="lead">The Species <small class="text-muted">(life on Earth)</small> File <small class="text-muted">(software)</small> Group <small class="text-muted">(collaborating community)</small> builds tools that facilitate cataloging, description, and study of the Earth’s species.</p>
     <p><a class="btn btn-primary btn-lg" href="/about" role="button">Learn more &raquo;</a></p>
   </div>
 </div>
