--- a/who.html
+++ b/who.html
@@ -11,8 +11,8 @@ title: Who
 <h2 class="alert alert-primary" role="alert">
 Open positions </h2>
 <ul>
-  <li> Coming soon - You! Our Community manager </li>
-  <li> Coming soon - You! Our UI/UX/Design specialist </li>
+  <li> Hiring now! <a href="https://bit.ly/3bUPPqS">Community manager</a> </li>
+  <li> Hiring now! <a href="https://bit.ly/2SVrl80">Design/UI/UX specialist.</a> </li>
 </ul>
 
 <h2> Founder </h2>
