--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@ title: About
 <p> While the group has now has a diverse background some of the its earliest history is in the context of the Orthoptera Species File.  <a href="http://orthoptera.speciesfile.org/HomePage/Orthoptera/Database.aspx#history">Read more here</a>.<em> Much more remains to be written.</em></p>
 
 <h2> Organization structure</h2>
-<p> Nested in the <a href="">Illinois Natural History Survey</a> in Champaign-Urbana, Illinois, part of the <a href="">Prarie Research Institute</a>, the Species File Group has core members and collaborators around the world. </p>
+<p> Nested in the <a href="https://www.inhs.illinois.edu">Illinois Natural History Survey</a> in Champaign-Urbana, Illinois, part of the <a href="https://www.prairie.illinois.edu">Prarie Research Institute</a>, the Species File Group has core members and collaborators around the world. </p>
 
 <h2> Funding </h2>
 <h3> Endowment </h3>
