--- a/who.html
+++ b/who.html
@@ -8,29 +8,23 @@ title: Who
 <h1 class="mt-5">{{ page.title }}</h1>
 <p class="lead"> Our team truly is much larger than core members, see our collaborations </p>
 
-<h2 class="alert alert-primary" role="alert">
-Open positions </h2>
-<ul>
-  <li> Hiring now! <a href="https://bit.ly/3bUPPqS">Community manager</a> </li>
-  <li> Hiring now! <a href="https://bit.ly/2SVrl80">Design/UI/UX specialist.</a> </li>
-</ul>
-
 <h2> Founder </h2>
 <p> The Species File Group was founded by David Eades. </p>
 
 <h2> Core team </h2>
 <p class="lead"> Species File Group members funded in part or whole </p>
 <ul>
-  <li> R. Edward DeWalt </li>
-  <li> Leslie Deem </li>
+  <li> Deb Paul </li>
   <li> Dmitry Dmitriev </li>
-  <li> Rich Flood </li>
   <li> Dmitry Mozzherin </li>
   <li> Geoff Ower </li>
-  <li> José Luis Pereira </li>
   <li> Hernán Pereira </li>
-  <li> Yuri Ruskov </li>
+  <li> José Luis Pereira </li>
+  <li> Leslie Deem </li>
   <li> Matt Yoder </li>
+  <li> R. Edward DeWalt </li>
+  <li> Rich Flood </li>
+  <li> Yuri Ruskov </li>
 </ul>
 
 <h3> The Orthopterist Society </h3>
