--- a/who.html
+++ b/who.html
@@ -14,7 +14,7 @@ title: Who
 <h2> Core team </h2>
 <p class="lead"> Species File Group members funded in part or whole </p>
 <ul>
-  <li> Deb Paul </li>
+  <li> Deborah Paul </li>
   <li> Dmitry Dmitriev </li>
   <li> Dmitry Mozzherin </li>
   <li> Geoff Ower </li>
