--- a/events.html
+++ b/events.html
@@ -22,10 +22,10 @@ title: Events
   <li>Who: Open to anyone. </li>
 </ul>
 
-<h3> Bi-Weekly Nomenclature and TaxonWorks Zoom </h3>
+<h3> Nomenclature and TaxonWorks Zoom </h3>
 <ul>
   <li>What: TaxonWorks excels at digitizing nomenclature. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization nomenclature. </li>
-  <li>When: <b>Tuesdays, weekly. 10:30 CST</b></li>
+  <li>When: <b>Tuesdays every second weekly. 10:30 CST.</b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone. </li>
   <li>How: To join, find a current participant and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
