--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@ title: Events
 
 <h2> Current </h2>
 
-<li>To join any of the Zoom meetings, find a current participant and ask for the Zoom link. We do not post the link here to prevent Zoom bombing.</em>
+<em>To join any of the Zoom meetings, find a current participant and ask for the Zoom link. We do not post the link here to prevent Zoom bombing.</em>
 
 <h3> Weekly Digitization and TaxonWorks Zoom </h3>
 <ul>
