--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@ title: About
 <p class="lead"> An overview of the Species File Group </p>
 
 <h2> Contact </h2>
-<p class="lead"> Address general questions to Ed or Matt </p>
+<p class="lead"> Address general questions to our Community Liason Deborah Paul or Matt Yoder </p>
 <ul>
-  <li><a href="mailto:dewalt@illinois.edu">R Edward DeWalt</a></li>
+  <li><a href="mailto:dlpaul@illinois.edu">Deborah Paul</a></li>
   <li><a href="mailto:diapriid@gmail.com">Matt Yoder</a></li>
 </ul>
 
