--- a/events.html
+++ b/events.html
@@ -32,6 +32,8 @@ title: Events
   <li>Note: A companion set of sessions focused on the curation of the Universal Chalcidoidea Database happens at the same time on alternate weeks. While slightly more focused many non-hymenopterists frequent these sessions. If interested reach out to us for details!</li>
 </ul>
 
-
 <h2> Past </h2>
-<em> Past events will be archived here. </em>
+<em> As of mid 2020 </em>
+
+<h3> TaxonWorks Together 2020 </h3>
+See [here](https://github.com/SpeciesFileGroup/taxonworks_together_2020)
