--- a/events.html
+++ b/events.html
@@ -36,4 +36,4 @@ title: Events
 <em> As of mid 2020 </em>
 
 <h3> TaxonWorks Together 2020 </h3>
-See [here](https://github.com/SpeciesFileGroup/taxonworks_together_2020)
+See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the events homepage</a>.
