--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@ title: Events
 
 <h2> Current </h2>
 
-<em>To join any of the Zoom meetings, find a current participant and ask for the Zoom link. We do not post the link here to prevent Zoom bombing.</em>
+<em>To join any of the Zoom meetings, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> to ask for the Zoom link. We do not post the link here to prevent Zoom bombing.</em>
 
 <h3> Weekly Digitization and TaxonWorks Zoom </h3>
 <ul>
@@ -24,16 +24,16 @@ title: Events
 
 <h3> Nomenclature and TaxonWorks Zoom </h3>
 <ul>
-  <li>What: TaxonWorks excels at digitizing nomenclature. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization nomenclature. </li>
+  <li>What: TaxonWorks excels at digitizing nomenclature. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
   <li>When: <b>Tuesdays every second weekly. 10:30 CST.</b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone. </li>
-  <li>How: To join, find a current participant and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
-  <li>Note: A companion set of sessions focused on the curation of the Universal Chalcidoidea Database happens at the same time on alternate weeks. While slightly more focused many non-hymenopterists frequent these sessions. If interested reach out to us for details!</li>
+  <li>How: To join, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
+  <li>Note: A companion set of sessions focused on the curation of the Universal Chalcidoidea Database happens at the same time on alternate weeks. While slightly more focused, many non-hymenopterists frequent these sessions. If interested reach out to us for details!</li>
 </ul>
 
 <h2> Past </h2>
 <em> As of mid 2020 </em>
 
 <h3> TaxonWorks Together 2020 </h3>
-See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the events homepage</a>.
+See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the github-based homepage</a> for this event.
