Added text about how to subscribe to the new listserv
I added (and temporarily commented out) a line about how to subscribe to the new listserv and what it is for.

--- a/events.html
+++ b/events.html
@@ -13,6 +13,7 @@ title: Events
 <h2> Current </h2>
 
 <em>To join any of the Zoom meetings, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> to ask for the Zoom link. We do not post the link here to prevent Zoom bombing.</em>
+<!-- <em>To join any of the Zoom meetings, subscribe to sfg-announce listserv to get the relevant Zoom links and meeting reminders.  Please use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> to ask questions. We do not post the link here to prevent Zoom bombing.</em> -->
 
 <h3> Weekly Digitization and TaxonWorks Zoom </h3>
 <ul>
