--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@ title: Events
 <h3> Weekly Digitization and TaxonWorks Zoom </h3>
 <ul>
   <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr weekly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
-  <li>When: <b>Tuesdays, weekly. 1:30 CST</b></li>
+  <li>When: <b>Wednesdays, weekly. 1:30 CST</b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
 </ul>
@@ -26,12 +26,16 @@ title: Events
 <h3> Nomenclature and TaxonWorks Zoom </h3>
 <ul>
   <li>What: TaxonWorks excels at digitizing nomenclature. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
-  <li>When: <b>Tuesdays every second weekly. 10:30 CST.</b></li>
+  <li>When: <b>Wednesdays, alternating other week (currently March 17, 24, etc.). 10:30 CST.</b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone. </li>
   <li>How: To join, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
   <li>Note: A companion set of sessions focused on the curation of the Universal Chalcidoidea Database happens at the same time on alternate weeks. While slightly more focused, many non-hymenopterists frequent these sessions. If interested reach out to us for details!</li>
 </ul>
+
+<h3> TaxonWorks Late Nite </h3>
+<em> An ongoing series of late nite "chill" and chat sessions. Look for the next session, and an AM option for international collaborators, soon. </em>
+
 
 <h2> Past </h2>
 <em> As of mid 2020 </em>
