--- a/events.html
+++ b/events.html
@@ -31,6 +31,7 @@ title: Events
   <li>Who: Open to anyone. </li>
   <li>How: To join, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
   <li>Note: A companion set of sessions focused on the curation of the Universal Chalcidoidea Database happens at the same time on alternate weeks. While slightly more focused, many non-hymenopterists frequent these sessions. If interested reach out to us for details!</li>
+  <li><a href="/calendar/nomenclature.ics">Add to calendar</a></li>
 </ul>
 
 <h3> TaxonWorks Late Nite </h3>
