changed CST to CDT and added UTC times

--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@ title: Events
 <h3> Weekly Digitization and TaxonWorks Zoom </h3>
 <ul>
   <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr weekly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
-  <li>When: <b>Wednesdays, weekly. 1:30 CST</b></li>
+  <li>When: <b>Wednesdays, weekly. 13:30 CDT (18:30 UTC)</b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
 </ul>
@@ -26,7 +26,7 @@ title: Events
 <h3> Nomenclature and TaxonWorks Zoom </h3>
 <ul>
   <li>What: TaxonWorks excels at digitizing nomenclature. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
-  <li>When: <b>Wednesdays, alternating other week (currently March 17, 24, etc.). 10:30 CST.</b></li>
+  <li>When: <b>Wednesdays, alternating other week (currently March 17, 24, etc.). 10:30 CDT (15:30 UTC)</b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone. </li>
   <li>How: To join, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
