--- a/events.html
+++ b/events.html
@@ -12,8 +12,13 @@ title: Events
 
 <h2> Current </h2>
 
-<em>To join any of the Zoom meetings, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> to ask for the Zoom link. We do not post the link here to prevent Zoom bombing.</em>
-<!-- <em>To join any of the Zoom meetings, subscribe to sfg-announce listserv to get the relevant Zoom links and meeting reminders.  Please use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> to ask questions. We do not post the link here to prevent Zoom bombing.</em> -->
+<p>To join any of the Zoom meetings you will need the current Zoom link. There are two ways to get it:
+  <ul>
+    <li> Subscribe to a low-traffic announcement-only email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce.</a></li>
+    <li> Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
+</ul>    
+<em> We do not post the link here to prevent Zoom bombing.</em>
+</p>
 
 <h3> Weekly Digitization and TaxonWorks Zoom </h3>
 <ul>
@@ -21,6 +26,7 @@ title: Events
   <li>When: <b>Wednesdays, weekly. 13:30 CDT (18:30 UTC)</b></li>
   <li>Where: Zoom.  </li>
   <li>Who: Open to anyone. </li>
+  <li><a href="/calendar/digitization.ics">Add to calendar (ICS file).</a></li>
 </ul>
 
 <h3> Nomenclature and TaxonWorks Zoom </h3>
@@ -31,7 +37,7 @@ title: Events
   <li>Who: Open to anyone. </li>
   <li>How: To join, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
   <li>Note: A companion set of sessions focused on the curation of the Universal Chalcidoidea Database happens at the same time on alternate weeks. While slightly more focused, many non-hymenopterists frequent these sessions. If interested reach out to us for details!</li>
-  <li><a href="/calendar/nomenclature.ics">Add to calendar</a></li>
+  <li><a href="/calendar/nomenclature.ics">Add to calendar (ICS file).</a></li>
 </ul>
 
 <h3> TaxonWorks Late Nite </h3>
