--- a/events.html
+++ b/events.html
@@ -12,12 +12,12 @@ title: Events
 
 <h2> Current </h2>
 
-<p>To join any of the Zoom meetings you will need the current Zoom link. There are two ways to get it:
+<p><em>To join any of the Zoom meetings you will need a link to the Zoom room.</em> There are two ways to get the link:
   <ul>
-    <li> Subscribe to a low-traffic announcement-only email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce.</a></li>
+    <li> Be sent the Zoom link via email as a reminder before the meeting (typically 1-2 days before). To do so, subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce.</a></li>
     <li> Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
 </ul>    
-<em> We do not post the link here to prevent Zoom bombing.</em>
+<em> We do not post the links here to prevent Zoom bombing.</em>
 </p>
 
 <h3> Weekly Digitization and TaxonWorks Zoom </h3>
@@ -31,7 +31,7 @@ title: Events
 
 <h3> Nomenclature and TaxonWorks Zoom </h3>
 <ul>
-  <li>What: TaxonWorks excels at digitizing nomenclature. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
+  <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
   <li>When: <b>Wednesdays, alternating other week (currently March 17, 24, etc.). 10:30 CDT (15:30 UTC)</b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone. </li>
@@ -42,7 +42,6 @@ title: Events
 
 <h3> TaxonWorks Late Nite </h3>
 <em> An ongoing series of late nite "chill" and chat sessions. Look for the next session, and an AM option for international collaborators, soon. </em>
-
 
 <h2> Past </h2>
 <em> As of mid 2020 </em>
