--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@ title: Events
 <h3> Nomenclature and TaxonWorks Zoom </h3>
 <ul>
   <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
-  <li>When: <b>Wednesdays, alternating other week (currently March 17, 24, etc.). 10:30 CDT (15:30 UTC) <span data-utc-to-local="15:30, 16:30"></span></b></li>
+  <li>When: <b>Wednesdays, alternating other week (currently March 17, 24, etc.). 10:30 CDT (15:30 UTC), <span data-utc-to-local="15:30, 16:30"></span></b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone. </li>
   <li>How: To join, find a current participant or use the <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Gitter channel</a> and they will pass on the Zoom link. We do not post the link here to prevent Zoom bombing.</li>
@@ -58,10 +58,10 @@ See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the g
       Date.UTC(
       date.getFullYear(),
       date.getMonth(),
-      date.getDay(),
+      date.getDate(),
       hours,
-      minutes || '', 
-      seconds || '')
+      minutes || 0,
+      seconds || 0)
     );
   
     return utcTime.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })
