--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@ title: Events
 <h1 class="mt-5">{{ page.title }}</h1>
 <p class="lead"> Current and past events hosted by the Species File Group </p>
 
-<p><em> Questions? </em> <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Chat with us on Gitter</a> or contact our community liason Deborah Paul.</p>
+<p><em> Questions? </em> <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Chat with us on Gitter</a> or contact our community liaison Deborah Paul.</p>
 
 <h2> Current </h2>
 
