--- a/events.html
+++ b/events.html
@@ -14,7 +14,7 @@ title: Events
 
 <p><em>To join any of the Zoom meetings you will need a link to the Zoom room.</em> There are two ways to get the link:
   <ul>
-    <li> Be sent the Zoom link via email as a reminder before the meeting (typically 1-2 days before). To do so, subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce.</a></li>
+    <li> Be sent the Zoom link via email as a reminder before the meeting (typically 1-2 days before). To do so, a) subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce.</a> and b) click "confirm" in the first email you receive from the listserv. </li>
     <li> Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
 </ul>    
 <em> We do not post the links here to prevent Zoom bombing.</em>
