--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@ title: Events
 <em> We do not post the links here to prevent Zoom bombing.</em>
 </p>
 
-<h3> Weekly Digitization and TaxonWorks Zoom </h3>
+<h3> Weekly Digitization and TaxonWorks</h3>
 <ul>
   <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr weekly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
   <li>When: <b>Wednesdays, weekly. 13:30 CDT (18:30 UTC), <span data-utc-to-local="18:30, 19:30"></span></b></li>
@@ -29,18 +29,32 @@ title: Events
   <li><a href="/calendar/digitization.ics">Add to calendar (ICS file).</a></li>
 </ul>
 
-<h3> Nomenclature and TaxonWorks Zoom </h3>
+<h3> Nomenclature and TaxonWorks </h3>
 <ul>
   <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. </li>
   <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 17 2021"></span>). 10:30 CDT (15:30 UTC), <span data-utc-to-local="15:30, 16:30"></span></b></li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone.</li>
-  <li>Note: A companion set of sessions focused on the curation of the Universal Chalcidoidea Database happens at the same time on alternate weeks. While slightly more focused, many non-hymenopterists frequent these sessions. If interested reach out to us for details!</li>
   <li><a href="/calendar/nomenclature.ics">Add to calendar (ICS file).</a></li>
 </ul>
 
+<h3> Guided exploration of nomenclature in TaxonWorks </h3>
+<ul>
+  <li>What: A somewhat simpler, more guided exploration of nomenclature (and related data) handling in TaxonWorks. Sessions are often class-like for part or most of the time. Downstream sessions are planned with collaborators according to their needs and the general discussion that occurs in these meetings.</li>
+  <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 24 2021"></span>). 10:30 CDT (15:30 UTC), <span data-utc-to-local="15:30, 16:30"></span></b></li>
+  <li>Where: Zoom. </li>
+  <li>Who: Lead and taught by Jim Woolley and colloaborators. Open to anyone.</li>
+  <li><a href="/calendar/guided_nomenclature.ics">Add to calendar (ICS file).</a></li>
+</ul>
+
 <h3> TaxonWorks Late Nite </h3>
-<em> An ongoing series of late nite "chill" and chat sessions. Look for the next session, and an AM option for international collaborators, soon. </em>
+<ul>
+  <li>What: An ongoing series of late nite "chill" and chat sessions with the TaxonWorks and broader community.  Bring your favourite topic and hangout out.</li>
+  <li>When: <b> April 19, <span data-utc-to-local="18:30, 19:30"></span>.</li>
+  <li>Where: Zoom. </li>
+  <li>Who: Open to anyone.</li>
+  <li><a href="/calendar/guided_nomenclature.ics">Add to calendar (ICS file).</a></li>
+</ul>
 
 <h2> Past </h2>
 <em> As of mid 2020 </em>
