--- a/events.html
+++ b/events.html
@@ -49,8 +49,8 @@ title: Events
 
 <h3> TaxonWorks Late Nite </h3>
 <ul>
-  <li>What: An ongoing series of late nite "chill" and chat sessions with the TaxonWorks and broader community.  Bring your favourite topic and hangout out.</li>
-  <li>When: <b> April 19, <span data-utc-to-local="18:30, 19:30"></span>.</li>
+  <li>What: An ongoing series of late nite "chill" and chat sessions with the TaxonWorks and broader community. Bring your favourite topic and hangout out.</li>
+  <li>When: <b> April 19, <span data-utc-to-local="18:30, 19:30"></span></b>.</li>
   <li>Where: Zoom. </li>
   <li>Who: Open to anyone.</li>
 </ul>
