closed open quotes

--- a/collaboration.html
+++ b/collaboration.html
@@ -64,7 +64,7 @@ title: Collaboration
   <li><a href="http://hymao.org/">Hymenoptera Anatomy Ontology</a></li>
   <li><a href="https://github.com/chalcid/jncdb">Universal Chalcidoidea Database</a></li>
   <li><a href="https://outreach.chalcid.org">Chalcids 101</a></li>
-  <li><a href="https://parasitetracker.org/>"Terrestrial Parasite Tracker</a></li>
+  <li><a href="https://parasitetracker.org/">"Terrestrial Parasite Tracker</a></li>
   <li><a href="http://tenebrionidbase.org">tenebrioniDBase</a></li>
   <li><a href="http://diapriid.org">The Diapriidae</a></li>
   <li><a href="http://evanioidea.info">Evanioidea Online</a></li>
