--- a/events.html
+++ b/events.html
@@ -39,6 +39,7 @@ title: Events
 </ul>
 
 <h3> Guided exploration of nomenclature in TaxonWorks </h3>
+Notice! Cancelled Only for this week's session on Wednesday 19 May.
 <ul>
   <li>What: A somewhat simpler, more guided exploration of nomenclature (and related data) handling in TaxonWorks. Sessions are often class-like for part or most of the time. Downstream sessions are planned with collaborators according to their needs and the general discussion that occurs in these meetings.</li>
   <li>When: <b>Wednesdays, alternating other week (currently <span data-alternate-week="March, 24 2021"></span>). 10:30 CDT (15:30 UTC), <span data-utc-to-local="15:30, 16:30"></span></b></li>
