--- a/who.html
+++ b/who.html
@@ -14,10 +14,10 @@ title: Who
 <h2> Core team </h2>
 <p class="lead"> Species File Group members funded in part or whole </p>
 <ul>
-  <li> Deborah Paul </li>
+  <li> <a href="https://orcid.org/0000-0003-2639-7520">Deborah Paul</a> </li>
   <li> Dmitry Dmitriev </li>
   <li> Dmitry Mozzherin </li>
-  <li> Geoff Ower </li>
+  <li> <a href="https://orcid.org/0000-0002-9770-2345">Geoff Ower</a> </li>
   <li> Hernán Pereira </li>
   <li> José Luis Pereira </li>
   <li> Leslie Deem </li>
