--- a/who.html
+++ b/who.html
@@ -16,7 +16,7 @@ title: Who
 <ul>
   <li> <a href="https://orcid.org/0000-0003-2639-7520">Deborah Paul</a> </li>
   <li> Dmitry Dmitriev </li>
-  <li> Dmitry Mozzherin </li>
+  <li> <a href="https://orcid.org/0000-0003-1593-1417">Dmitry Mozzherin</a> </li>
   <li> <a href="https://orcid.org/0000-0002-9770-2345">Geoff Ower</a> </li>
   <li> Hernán Pereira </li>
   <li> José Luis Pereira </li>
