Add TaxonWorks Together 2021 event.

--- a/events.html
+++ b/events.html
@@ -20,6 +20,14 @@ title: Events
 <em> We do not post the links here to prevent Zoom bombing.</em>
 </p>
 
+<h3> TaxonWorks Together 2021 </h3>
+<ul>
+  <li>What: A community building event. See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021"> for details.</a> </li>
+  <li>When: December 6th-10th, 2021.</li>
+  <li>Where: Zoom</li>
+  <li>Who: Open to anyone.</li>
+</ul>
+
 <h3> Weekly Digitization and TaxonWorks</h3>
 <ul>
   <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr weekly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
